made some changes to pokemon page -> fixed styling and bug where elements doesn't load if zoom level is too big

--- a/styles/components/steven/NavBar.module.scss
+++ b/styles/components/steven/NavBar.module.scss
@@ -28,6 +28,7 @@
     }
 
     &:hover {
+      transition: ease-in 0.1s;
       transform: translateY(-2px);
     }
   }
