--- a/styles/components/steven/pokemon/List.module.css
+++ b/styles/components/steven/pokemon/List.module.css
@@ -5,3 +5,7 @@
   margin: 200px 200px;
   gap: 200px;
 }
+
+.loading {
+  margin-bottom: 200px;
+}
