--- a/styles/pages/steven/pokemon/Home.module.scss
+++ b/styles/pages/steven/pokemon/Home.module.scss
@@ -4,6 +4,5 @@
 .home {
   @include flexCenter;
   flex-direction: column;
-  margin-bottom: 100px;
   background-color: $dark;
 }
